Removed added spacing in JS (using CSS now), fixed static list inheritance of .splice, fixed accepting previous wrong answers multiple times, removed debugger calls

--- a/assets/css/bootstrap_override.css
+++ b/assets/css/bootstrap_override.css
@@ -268,7 +268,8 @@ textarea {
 /* Game element styling */
 #displayWord {
 	font-size: 2.5em;
-	letter-spacing: 7px;
+	letter-spacing: 18px;
+	margin-right: -18px;
 }
 
 
